--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.codepath.libraries:asynchttpclient:2.0.0'
+    implementation 'org.parceler:parceler-api:1.1.12'
+    annotationProcessor 'org.parceler:parceler:1.1.12'
+
+
 
 }
