--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,12 @@ dependencies {
     implementation 'org.parceler:parceler-api:1.1.12'
     annotationProcessor 'org.parceler:parceler:1.1.12'
 
-
-
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation "com.github.parse-community.Parse-SDK-Android:parse:1.18.5"
+
+
 
 
 }
