--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+
+
     <application
         android:name=".ParseApplication"
         android:allowBackup="true"
@@ -21,6 +23,8 @@
         </activity>
         <activity android:name=".MainActivity">
         </activity>
+        <receiver
+            android:name=".NotificationReceiver"></receiver>
     </application>
 
 </manifest>
